--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node .",
-    "dev": "nodemon ."
+    "dev": "ts-node ./src/server.ts"
   },
   "keywords": [],
   "author": "Guilherme Ribeiro (guiribeirodev)",
@@ -15,6 +15,11 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.2",
+    "nodemon": "^2.0.13",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
